pets/k8s/resources-dev.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: pets-app
  labels:
    app: pets-app
    group: micro-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pets-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: pets-app
        group: micro-pet
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: pets-config
            items:
            - key: pets_config.json
              path: pets_config.json
      containers:
        - name: pets
          image: localregistry:5000/micropet/pets:dev
          imagePullPolicy: Always
          ports:
            - name: pets
              containerPort: 9000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/service/
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pets-service
  labels:
    app: pets-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: pets
      port: 9000
  selector:
    app: pets-app
    group: micro-pet
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pets-ingress    
spec:
  rules:
    - host: k8s.mytanzu.xyz
      http:
        paths:
          - path: /pets
            backend:
              serviceName: pets-service
              servicePort: 9000
